--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="form-group">
-      <label class="col-sm-3 control-label">Entity</label>
+      <label class="col-sm-3 control-label">Library</label>
 
       <div class="col-sm-7">
         <select class="form-control" [(ngModel)]="selectedItemAdd" name="selectedItemAdd"  (ngModelChange)="onClickEntityPopup($event)">
@@ -91,11 +91,11 @@
       <div class="bannerTitle"><b>Pigify</b></div>
       <div class="bannerText"> - Your Library of Things!</div>
 
-      <div class="col-sm-5" >
+      <div class="col-sm-6" >
         <ul>
           <li *ngIf="tabs" class="one"><a> <img src="./assets/icons/items.svg" class="grey-button-icon"> Items</a></li>
           <li *ngIf="tabs" class="two" (click)="redirect('users')"><a><img src="./assets/icons/users.svg" class="grey-button-icon"> Users</a></li>
-          <li *ngIf="tabs" class="three" (click)="redirect('entities')"><a><img src="./assets/icons/entities.svg" class="grey-button-icon"> Entities</a></li>
+          <li *ngIf="tabs" class="three" (click)="redirect('entities')"><a><img src="./assets/icons/entities.svg" class="grey-button-icon"> Libraries</a></li>
           <hr/>
         </ul>
       </div>
@@ -115,7 +115,7 @@
 
     <div class="row">
       <div class="col-sm-2 currentEntity">
-        <label>Current entity:</label>
+        <label>Current library:</label>
         <div class="currentEntityText">
         {{userEntityName}}
         </div>
