--- a/src/app/users/list-users/list-users.component.html
+++ b/src/app/users/list-users/list-users.component.html
@@ -8,11 +8,11 @@
       <div class="bannerTitle"><b>Pigify</b></div>
       <div class="bannerText"> - Your Library of Things!</div>
 
-      <div class="col-sm-5" >
+      <div class="col-sm-6" >
         <ul>
           <li *ngIf="tabs" class="one" (click)="redirect('')"><a> <img src="./assets/icons/items.svg" class="grey-button-icon"> Items</a></li>
           <li *ngIf="tabs" class="two"><a><img src="./assets/icons/users.svg" class="grey-button-icon"> Users</a></li>
-          <li *ngIf="tabs" class="three" (click)="redirect('entities')"><a><img src="./assets/icons/entities.svg" class="grey-button-icon"> Entities</a></li>
+          <li *ngIf="tabs" class="three" (click)="redirect('entities')"><a><img src="./assets/icons/entities.svg" class="grey-button-icon"> Libraries</a></li>
           <hr/>
         </ul>
       </div>
@@ -32,7 +32,7 @@
 
     <div class="row">
       <div class="col-sm-2 currentEntity">
-        <label>Current entity:</label>
+        <label>Current library:</label>
         <div class="currentEntityText">
           {{userEntityName}}
         </div>
