--- a/src/app/home/login.component.css
+++ b/src/app/home/login.component.css
@@ -66,26 +66,27 @@
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
+  margin-top: 70px;
   cursor: pointer;
   padding: 14px 40px;
 }
 
 .emailLoginButton {
+  border: 5px solid #4E4E4E;
   top: 61%;
   left: 50%;
   position: absolute;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  background-color: #b7b8ba;
-  border: none;
+  background-color: #FFF;
   color: black;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin-top: 70px;
+  margin: 4px 2px;
   cursor: pointer;
-  padding: 14px 98px;
+  padding: 14px 53px;
 }
 
 
