--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -8,14 +8,12 @@
   <div class="text">Your Library of <br>Things!</div>
 </div>
 
+
+<button class="emailLoginButton" (click)="emailShowDialog = !emailShowDialog"><img src="./assets/icons/email.svg" width="20" height="20"/> Sign in with email</button>
+
 <button class="loginButton" (click)="login()"><img src="./assets/icons/fb-icon.svg" width="20" height="20"/> Sign in
   with Facebook
 </button>
-
-
-<button class="emailLoginButton" (click)="emailShowDialog = !emailShowDialog"><img src="./assets/icons/email.svg" width="20" height="20"/> Email
-</button>
-
 
 </body>
 
