epost login fix

--- a/src/app/items/item-list-nest.html
+++ b/src/app/items/item-list-nest.html
@@ -4,7 +4,7 @@
     <thead>
     <tr bgcolor="#422744">
 
-      <th>Item({{nrOfItem}}):</th>
+      <th>Items({{nrOfItem}}):</th>
       <th></th>
       <th>Borrower:</th>
       <th></th>
