--- a/src/app/users/user-list-nest/user-list-nest.component.html
+++ b/src/app/users/user-list-nest/user-list-nest.component.html
@@ -2,7 +2,7 @@
   <table class='table table-striped'>
     <thead>
     <tr bgcolor="#422744">
-      <th>User({{nrOfUsers}})</th>
+      <th>Users({{nrOfUsers}})</th>
       <th></th>
       <th>Email</th>
       <th>Role</th>
