--- a/src/app/entities/entity-list/entity-list.component.html
+++ b/src/app/entities/entity-list/entity-list.component.html
@@ -57,11 +57,12 @@
 
   <div class='panel-body'>
 
-
+<!-- Crate new Library
     <div style="float: right">
       <button type="button" class="buttonFilter" (click)="showDialog = !showDialog"><i class='glyphicon glyphicon-plus'></i> Create new library
       </button>
     </div>
+    -->
   </div>
 
 
