New Library dialog_ som error with callback

--- a/src/app/entities/entity-list-nest/entity-list-nest.component.html
+++ b/src/app/entities/entity-list-nest/entity-list-nest.component.html
@@ -39,3 +39,5 @@
     </tbody>
   </table>
 </div>
+
+<app-library-dialog  [(visible)]="showDialog" [(receiveID)]="sendID"  [(receiveLibraryName)]="sendName"></app-library-dialog>
