Edit library finish, som callback error but works

--- a/src/app/items/item-dialog/item-dialog.component.html
+++ b/src/app/items/item-dialog/item-dialog.component.html
@@ -143,7 +143,7 @@
               >
             </div>
 
-            <button class='buttonCalendar' (click)="calenderMode = true">
+            <button class='buttonCalendar' (click)="calenderModus()">
               <img src="./assets/icons/calendar.svg" class="calendar-button-icon">Item calendar
             </button>
 
