--- a/src/app/entities/entity-list/entity-list.component.html
+++ b/src/app/entities/entity-list/entity-list.component.html
@@ -73,5 +73,4 @@
   </div>
 
 
-<app-addentity-dialog [(visible)]="showDialog">
-</app-addentity-dialog>
+<app-addentity-dialog [(visible)]="showDialog"></app-addentity-dialog>
