Final release_ Item loaned for users fixed - error warnings fix

--- a/src/app/home/emailLoginDialog/email-login-dialog/email-login-dialog.component.css
+++ b/src/app/home/emailLoginDialog/email-login-dialog/email-login-dialog.component.css
@@ -9,6 +9,11 @@ a {
   margin: auto;
 }
 
+.title {
+  color: #422744;
+  font-size: 25px;
+}
+
 .dialog input {
   font-family: "Roboto", sans-serif;
   outline: 0;
