--- a/src/app/home/emailLoginDialog/email-login-dialog/email-login-dialog.component.html
+++ b/src/app/home/emailLoginDialog/email-login-dialog/email-login-dialog.component.html
@@ -2,7 +2,7 @@
 
 
   <div *ngIf="!forgotMode">
-
+<div class="title">Login</div>
     <form>
       <input type="text" autofocus [(ngModel)]='emailField' name="emailField" ide="emailField'" placeholder="email"/>
       <input type="password" [(ngModel)]='passField' name="passField" ide="passField'"  placeholder="password"/>
