--- a/src/app/items/item-dialog/item-dialog.component.html
+++ b/src/app/items/item-dialog/item-dialog.component.html
@@ -35,134 +35,108 @@
             Overdue
             </span>
 
-          <div *ngIf="!calenderMode">
-            <br>
-            <br>
-            <div><b>Standard number of loan days for this item:</b></div>
-            <div *ngIf="!editMode">
-              <div>{{item?.reservationDays}}</div>
+
+          <br>
+          <br>
+          <div><b>Standard number of loan days for this item:</b></div>
+          <div *ngIf="!editMode">
+            <div>{{item?.reservationDays}}</div>
+          </div>
+
+
+          <div *ngIf="editMode">
+            <div class="col-xs-2">
+              <input class="form-control" type="number" name="dummyresDay" [(ngModel)]='dummyresDay' value="3"
+                     id="dummyresDay">
             </div>
-          </div>  <!-- calender-->
-
-          <div *ngIf="!calenderMode">
-            <div *ngIf="editMode">
-              <div class="col-xs-2">
-                <input class="form-control" type="number" name="dummyresDay" [(ngModel)]='dummyresDay' value="3"
-                       id="dummyresDay">
-              </div>
-            </div>
-          </div>  <!-- calender-->
+          </div>
 
 
-          <div *ngIf="!calenderMode">
-            <div *ngIf="item?.loan">
-              <br>
-              <b>Borrower:</b>
-
-              <div class='row' *ngIf="item.loan?.userPhoto">
-                <img class="avatar"
-                     [style.width.px]='50'
-                     [style.height.px]='50'
-                     [style.margin-left.px]='50'
-                     [src]='item.loan?.userPhoto'>
-                {{item.loan?.loanerName}}
-              </div>
-            </div>
+          <div *ngIf="item?.loan">
             <br>
-            <div><b>Description:</b></div>
-            <div *ngIf="!editMode" class="descScroll">{{description}}</div>
+            <b>Borrower:</b>
 
-            <textarea *ngIf="editMode" [(ngModel)]='dummyDesc' name="description" ide="description'" rows="16"
-                      cols="64">
+            <div class='row' *ngIf="item.loan?.userPhoto">
+              <img class="avatar"
+                   [style.width.px]='50'
+                   [style.height.px]='50'
+                   [style.margin-left.px]='50'
+                   [src]='item.loan?.userPhoto'>
+              {{item.loan?.loanerName}}
+            </div>
+          </div>
+          <br>
+          <div><b>Description:</b></div>
+          <div *ngIf="!editMode" class="descScroll">{{description}}</div>
+
+          <textarea *ngIf="editMode" [(ngModel)]='dummyDesc' name="description" ide="description'" rows="16"
+                    cols="64">
       </textarea>
 
-          </div> <!-- calender -->
-
-          <div *ngIf="!calenderMode">
-            <div *ngIf="!editMode">
-              <button class='buttonEdit' (click)="editMode = true">
-                <img src="./assets/icons/edit.svg" class="edit-button-icon">Edit
-              </button>
-            </div>
-          </div> <!--Delete item -->
-
-          <div *ngIf="!calenderMode">
-            <div *ngIf="editMode ">
-              <button class='buttonDelete' (click)="deleteDialog()">Delete this item
-              </button>
-            </div>
-          </div> <!-- NOT calender -->
-
-
-          <div *ngIf="calenderMode">
-            <br>
-            <br>
-            <div *ngIf="item.photoURL">
-              <img class="img-thumbnail"
-                   [style.width.px]='200'
-                   [style.margin.px]='2'
-                   [src]='item?.photoURL'
-              >
-            </div>
-
-            <div *ngIf="!item.photoURL">
-              <img class="img-thumbnail" class='center-block img-responsive'
-                   [style.width.px]='200'
-                   [style.margin.px]='2'
-                   src='../../assets/images/NoPhoto.png'
-              >
-            </div>
-          </div>
-
-          <div *ngFor='let res of reserved' class='row'>
-            {{res.formattedShortpUpDate}} - {{res.formattedShortRetDate}}:
-            <br>
-            {{res.userName}}
-            -----------------------------
+          <div *ngIf="item?.reserved">
+            <b>Reservations</b>
+            <table class="resRow">
+              <tr *ngFor='let res of reserved'>
+                {{res.userName}}
+                <br>
+                {{res.formattedpUpDate}} - {{res.formattedRetDate}}
+              </tr>
+            </table>
           </div>
 
 
+          <div *ngIf="!editMode">
+
+                <span *ngIf="item.status=='Notify'">
+        <a class='btn btn-warning'
+           (click)="sendEmail(item.loan?.userEmail, item.loan?.loanerName, item.loan?.formattedShortDate)"
+           style='width:150px'>
+    <i class='glyphicon glyphicon-bell'></i> Send a reminder</a>
+</span>
+
+
+            <button class='buttonEdit' (click)="editMode = true">
+              <img src="./assets/icons/edit.svg" class="edit-button-icon">Edit
+            </button>
+          </div>
+
+
+          <div *ngIf="editMode ">
+            <button class='buttonDelete' (click)="deleteDialog()">Delete this item
+            </button>
+          </div>
         </div> <!--column1 -->
 
 
-        <div *ngIf="!calenderMode">
-          <div>
-            <div *ngIf="item.photoURL">
-              <img class="img-thumbnail"
-                   [style.width.px]='200'
-                   [style.margin.px]='2'
-                   [src]='item?.photoURL'
-              >
-            </div>
+        <div>
+          <div *ngIf="item.photoURL">
+            <img class="img-thumbnail"
+                 [style.width.px]='200'
+                 [style.margin.px]='2'
+                 [src]='item?.photoURL'
+            >
+          </div>
 
-            <div *ngIf="!item.photoURL">
-              <img class="img-thumbnail" class='center-block img-responsive'
-                   [style.width.px]='200'
-                   [style.margin.px]='2'
-                   src='../../assets/images/NoPhoto.png'
-              >
-            </div>
+          <div *ngIf="!item.photoURL">
+            <img class="img-thumbnail" class='center-block img-responsive'
+                 [style.width.px]='200'
+                 [style.margin.px]='2'
+                 src='../../assets/images/NoPhoto.png'
+            >
+          </div>
 
-            <button class='buttonCalendar' (click)="calenderModus()">
-              <img src="./assets/icons/calendar.svg" class="calendar-button-icon">Item calendar
+          <div *ngIf="editMode">
+            <button class='buttonCancel' (click)="cancelEditMode()">Cancel
             </button>
 
-            <div *ngIf="editMode">
-              <button class='buttonCancel' (click)="cancelEditMode()">Cancel
-              </button>
-
-              <button class='buttonSave' (click)="onEditSubmit()">
-                <i class='glyphicon glyphicon-plus btnSaveIcon'></i>Save
-              </button>
-            </div>
+            <button class='buttonSave' (click)="onEditSubmit()">
+              <i class='glyphicon glyphicon-plus btnSaveIcon'></i>Save
+            </button>
+          </div>
 
 
-          </div> <!-- Column 2-->
+        </div> <!-- Column 2-->
 
-        </div> <!-- calendarMode -->
-        <div *ngIf="calenderMode">
-          Calendar
-        </div>
       </div> <!-- width -->
     </div> <!-- panelBody-->
 
