--- a/src/app/users/user-list-nest/user-list-nest.component.html
+++ b/src/app/users/user-list-nest/user-list-nest.component.html
@@ -11,11 +11,10 @@
     <tbody>
 
 
-    <tr *ngFor='let user of visibleUsers | userFilter:listFilter, let i = index' (click)="setClickedRow(i,user.userUid, user.fullname, user.email)" [class.active]='i == currentRow'>
+    <tr *ngFor='let user of visibleUsers | userFilter:listFilter, let i = index' (click)="setClickedRow(i,user)" [class.active]='i == currentRow'>
 
       <td width=10>
-      <img  class="avatar" [src]='user.photoURL'
-               [title]='user.fullname'> </td>
+      <img  class="avatar" [src]='user.photoURL'> </td>
       <td>{{ user?.fullname }}</td>
       <td>{{ user?.email}}</td>
       <td>
@@ -33,4 +32,4 @@
 </div>
 
 
-<app-user-dialog [(visible)]="showDialog" [(receivedID)]="sendID" [(lendingItems)]="lendingItems" [(receivedName)]="sendName" [(receivedEmail)]="sendUserEmail"    [(receivedEntity)]="receivedEntity"></app-user-dialog>
+<app-user-dialog [(visible)]="showDialog" [(selectedUser)]="selectedUser" [(lendingItems)]="lendingItems"    [(receivedEntity)]="receivedEntity"></app-user-dialog>
