Final release_ - all error & warnings fixed

--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -56,7 +56,7 @@
         <img-cropper [image]="data" [settings]="cropperSettings"></img-cropper>
         <br>
         <img
-          [src]="data && data.image ? data.image : 'http://placehold.it/128x128'"
+          [src]="data && data.image ? data.image : 'https://placehold.it/128x128'"
 
           class="profile-img">
         <button type="button" class="btn btn-default" (click)='onChangingImageClick()'>Ok</button>
