--- a/src/app/users/list-users/list-users.component.html
+++ b/src/app/users/list-users/list-users.component.html
@@ -69,6 +69,6 @@
 
 </div>
   <div style="margin-bottom: 15px"></div>
-    <app-user-list-nest [filterBy]="filterBy" [users]="users" [listFilter]="listFilter" [receivedEntity]="currentuseEntity"></app-user-list-nest>
+    <app-user-list-nest [filterBy]="filterBy" [users]="users" [listFilter]="listFilter"></app-user-list-nest>
 
 
