--- a/src/app/users/user-list-nest/user-list-nest.component.html
+++ b/src/app/users/user-list-nest/user-list-nest.component.html
@@ -32,4 +32,4 @@
 </div>
 
 
-<app-user-dialog [(visible)]="showDialog" [(selectedUser)]="selectedUser" [(lendingItems)]="lendingItems"    [(receivedEntity)]="receivedEntity"></app-user-dialog>
+<app-user-dialog [(visible)]="showDialog" [(selectedUser)]="selectedUser" [(lendingItems)]="lendingItems"    [(userUID)]="userUID"></app-user-dialog>
