--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -68,7 +68,7 @@
         <div>
           <div align="center">
             <img id="imageID"
-                 [src]="data && data.image ? data.image :  'http://placehold.it/128x128'"
+                 [src]="data && data.image ? data.image :  'https://placehold.it/128x128'"
                  class="profile-img"><br>
           </div>
           <button type="button" (click)="onChangingImageClick()">Choose Image</button>
