--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand">Borrowing admin-panel</a>
+      <a class="navbar-brand">Pigify</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
 
