--- a/src/app/entities/entity-list-nest/entity-list-nest.component.html
+++ b/src/app/entities/entity-list-nest/entity-list-nest.component.html
@@ -35,6 +35,22 @@
       <td *ngIf="entity.name != userEntityName"></td>
       <td></td>
     </tr>
+
+    <tr *ngFor='let jentity of visibleJoinedLibrary |  entityFilter:list, let i = index' (click)="setClickedRow(i,jentity)" [class.active]='i == currentRow'>
+
+
+      <div style="margin-top: 10px ">
+        <td>{{ jentity?.entityName }}</td>
+      </div>
+      <td>Granted</td>
+      <td *ngIf="jentity.entityName === userEntityName">Currently selected</td>
+      <td *ngIf="jentity.entityName != userEntityName"></td>
+      <td></td>
+    </tr>
+
+
+
+
     </tbody>
   </table>
 </div>
