--- a/src/app/entities/entity-list/entity-list.component.html
+++ b/src/app/entities/entity-list/entity-list.component.html
@@ -69,7 +69,7 @@
 
 
   <div style="margin-bottom: 15px"></div>
-  <app-entity-list-nest  [entities]="entities"  [userEntityName]="userEntityName" [listFilter]="listFilter"></app-entity-list-nest>
+  <app-entity-list-nest  [entities]="entities" [joinedlib]="joinedlib"  [userEntityName]="userEntityName" [listFilter]="listFilter"></app-entity-list-nest>
   </div>
 
 
